--- a/docs/notes/daliy_notes/2022_May.md
+++ b/docs/notes/daliy_notes/2022_May.md
@@ -1,9 +1,7 @@
 ##### 20220515
-
-
-
-##### 20220514
-- [x] update obsidian skeleton; [[AppleProRaw]]
-- [ ] Apple ProRaw lossy jpg extract fron DNG;
 - [ ] bliateral filter, bilteral joint filter, bilateral upsampling;
 - [ ] DNN STOA paper update;
+
+##### 20220514
+- [x] update obsidian skeleton; 
+- [x] Apple ProRaw lossy jpg extract fron DNG;[[AppleProRaw]]
