update bilateral filter and personal CV

--- a/docs/notes/daliy_notes/2022_May.md
+++ b/docs/notes/daliy_notes/2022_May.md
@@ -1,6 +1,9 @@
+
+
 ##### 20220515
-- [ ] bliateral filter, bilteral joint filter, bilateral upsampling;
+- [ ] bliateral filter, bilteral joint filter, bilateral upsampling; [[filtering]]
 - [ ] DNN STOA paper update;
+- [ ] update CV;
 
 ##### 20220514
 - [x] update obsidian skeleton; 
