update key points of bilateral filter and filter and loss

--- a/docs/notes/daliy_notes/2022_May.md
+++ b/docs/notes/daliy_notes/2022_May.md
@@ -1,4 +1,6 @@
 
+##### 20220517
+- [ ]  update bilateral page; datasets;
 
 ##### 20220515
 - [ ] bliateral filter, bilteral joint filter, bilateral upsampling; [[filtering]]
