--- a/docs/notes/daliy_notes/2022_May.md
+++ b/docs/notes/daliy_notes/2022_May.md
@@ -1,4 +1,10 @@
 
+
+
+##### 20220526
+- arbitary style transfer in real-time with adaptive instance normalization
+- controlling perceptual factors in neural style tranfer
+- joint bilateral learning for real time universal photorealistic style tranfer
 ##### 20220517
 - [ ]  update bilateral page; datasets;
 
